# energy-consumption-prediction

./: README.md  app.py  requirements.txt
energy-consumption-complete-project/: pyproject.toml
energy-consumption-complete-project/models/: dt-energy-consumption-model.pck  svm-energy-consumption-model.pck
energy-consumption-complete-project/models-api/: energy_consumption_predict_app.py  energy_consumption_predict_service.py
energy-consumption-complete-project/notebooks/: models.ipynb
energy-consumption-complete-project/streamlit/: app.py
