[tool.poetry]
name = "proyectoia-librerias-env"
version = "0.1.0"
description = ""
authors = ["ManuelParrado <parradomb04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
ucimlrepo = "^0.0.7"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
